# bevy_material_ui

./: .pr-description.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEMO_GUIDE.md  README.md  build.rs  telemetry.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish.yml
assets/i18n/: de-DE.mui_lang  en-US.mui_lang  es-ES.mui_lang  fr-FR.mui_lang  he-IL.mui_lang  ja-JP.mui_lang  zh-CN.mui_lang
benchmarks/results/: README.md  report.html
benchmarks/results/change/: estimates.json
benchmarks/results/new/: estimates.json
docs/: DATETIME_PICKER_REFACTOR.md  HCT_SOLVER.md  MIGRATION_v0.2.4.md  README.md  orientation-policy.md
docs/audits/: divider-vs-mdc.md  scrollbars-vs-bevy.md  slider-vs-mdc.md
docs/components/: button.md  card.md  checkbox.md  chip.md  dialog.md  divider.md  fab.md  icon_button.md  list.md  menu.md  progress.md  radio.md  select.md  slider.md  snackbar.md  switch.md  tabs.md  text_field.md  tooltip.md
docs/components/screenshots/: README.md
examples/: all_icon_buttons.rs  app_bar_demo.rs  badge_demo.rs  button_demo.rs  button_group_demo.rs  card_demo.rs  checkbox_demo.rs  chip_demo.rs  date_picker_demo.rs  debug_hctsolver.rs  dialog_demo.rs  divider_demo.rs  fab_demo.rs  icon_button_demo.rs  list_demo.rs  loading_indicator_demo.rs  menu_demo.rs  palette_tool.rs  progress_demo.rs  radio_demo.rs  scroll_demo.rs  search_demo.rs  select_demo.rs  slider_demo.rs  snackbar_demo.rs  switch_demo.rs  tabs_demo.rs  test_green_colors.rs  textfield_demo.rs  time_picker_demo.rs  toolbar_demo.rs  tooltip_demo.rs
examples/showcase/: common.rs  mod.rs  navigation.rs  showcase.rs  tab_state.rs
examples/showcase/views/: app_bar.rs  badges.rs  buttons.rs  cards.rs  checkboxes.rs  chips.rs  (+26 more)
src/: app_bar.rs  badge.rs  button.rs  button_group.rs  card.rs  checkbox.rs  chip.rs  datetime_picker.rs  dialog.rs  fab.rs  i18n.rs  icon_button.rs  lib.rs  list.rs  loading_indicator.rs  locale.rs  menu.rs  progress.rs  radio.rs  scroll.rs  search.rs  select.rs  slider.rs  snackbar.rs  switch.rs  tabs.rs  text_field.rs  toolbar.rs  tooltip.rs
src/color/: hct.rs  math.rs  palette.rs
src/date_picker/: calendar.rs  constraints.rs  mod.rs  range_selector.rs  types.rs
src/icons/: mod.rs
src/layout/: mod.rs  scaffold_types.rs
src/time_picker/: clock.rs  format.rs  mod.rs
tests/: material_component_tests.rs
tests/ui_tests/: README.md  capture_docs.py
