[package]
name = "bevy_material_ui"
version = "0.2.3"
edition = "2021"
authors = ["Edgar H. Sanchez"]
description = "Material Design 3 UI components for Bevy game engine"
license = "MIT"
repository = "https://github.com/edgarhsanchez/bevy_material_ui"
documentation = "https://docs.rs/bevy_material_ui"
keywords = ["bevy", "ui", "material-design", "gamedev"]
categories = ["game-development", "gui", "rendering"]
readme = "README.md"

# Ensure assets referenced via `include_bytes!` are present in published crates.
include = [
	"src/**",
	"assets/**",
	"docs/**",
	"examples/**",
	"Cargo.toml",
	"README.md",
	"LICENSE",
	"COPYRIGHT",
]

[package.metadata.docs.rs]
# docs.rs uses a Linux builder; this hints it to build without pulling in extra system deps.
no-default-features = false
all-features = false
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
# Bevy Game Engine - Latest version
bevy = "0.17.3"
serde_json = "1.0"
thiserror = "1.0"

# Pure Rust CAM16 + HCT solver
hct-cam16 = "0.1.0"

# Packed embedded icon blob (required).
google-material-design-icons-bin = "0.1.2"

# Optional clipboard support for text fields (copy/paste)
arboard = { version = "3.4", optional = true }

[features]
# Keep default features empty so downstream crates can opt in.
default = []

# Enables copy/paste support in `MaterialTextField` via the `arboard` crate.
clipboard = ["dep:arboard"]

[dev-dependencies]
# No dynamic_linking to avoid Windows linker limit issues
criterion = { version = "0.5", features = ["html_reports"] }



[[bench]]
name = "color_benchmarks"
harness = false

[[bench]]
name = "component_benchmarks"
harness = false

[[bench]]
name = "system_benchmarks"
harness = false

[[example]]
name = "showcase"
path = "examples/showcase/main.rs"

[[example]]
name = "button_demo"
path = "examples/button_demo.rs"

[[example]]
name = "slider_demo"
path = "examples/slider_demo.rs"

[[example]]
name = "switch_demo"
path = "examples/switch_demo.rs"

[[example]]
name = "textfield_demo"
path = "examples/textfield_demo.rs"

[[example]]
name = "card_demo"
path = "examples/card_demo.rs"

[[example]]
name = "list_demo"
path = "examples/list_demo.rs"

[[example]]
name = "all_icon_buttons"
path = "examples/all_icon_buttons.rs"

[[example]]
name = "palette_tool"
path = "examples/palette_tool.rs"
